[gd_scene load_steps=3 format=2]

[ext_resource path="res://Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=2]

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="ZombieSpawnTimers" type="Node" parent="."]

[node name="Timer1" type="Timer" parent="ZombieSpawnTimers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="ZombieSpawnTimers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="ZombieSpawnTimers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer4" type="Timer" parent="ZombieSpawnTimers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer5" type="Timer" parent="ZombieSpawnTimers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ZombieStartPos" type="Node" parent="."]

[node name="StartPos1" type="Position2D" parent="ZombieStartPos"]
position = Vector2( 148, 351 )

[node name="StartPos2" type="Position2D" parent="ZombieStartPos"]
position = Vector2( 319, 308 )

[node name="StartPos3" type="Position2D" parent="ZombieStartPos"]
position = Vector2( 646, 366 )

[node name="StartPos4" type="Position2D" parent="ZombieStartPos"]
position = Vector2( 446, 150 )

[node name="StartPos5" type="Position2D" parent="ZombieStartPos"]
position = Vector2( 738, 241 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 138.581, 97.5648 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
current = true

[node name="PlayerStartPos" type="Position2D" parent="."]
position = Vector2( 510, 474 )
[connection signal="timeout" from="ZombieSpawnTimers/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="ZombieSpawnTimers/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="ZombieSpawnTimers/Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="ZombieSpawnTimers/Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="ZombieSpawnTimers/Timer5" to="." method="_on_Timer5_timeout"]
